--- a/index.html
+++ b/index.html
@@ -213,6 +213,15 @@ crossorigin="anonymous"></script>
                             <div class="ms-hero-img-slider carousel-item">
                               <img src="/assets/img/home/support.png" alt class="img-fluid">
                             </div>
+                            <div class="ms-hero-img-slider carousel-item">
+                              <img src="/assets/img/home/office2.png" alt class="img-fluid">
+                            </div>
+                            <div class="ms-hero-img-slider carousel-item">
+                              <img src="/assets/img/home/office3.png" alt class="img-fluid">
+                            </div>
+                            <div class="ms-hero-img-slider carousel-item">
+                              <img src="/assets/img/home/office4.png" alt class="img-fluid">
+                            </div>
                           </div>
                         </div>
                       </div>
