Update index, blog, gallery

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -332,13 +332,16 @@ crossorigin="anonymous"></script>
       </div>
     </div>
   </section>
-</div>
-<br>
-            <div class="container justify-content-between align-items-center ml-1"><br>
-            <div class="row pl-1">
+            <div class="container justify-content-between align-items-center"><br>
+            <div class="row">
                 <a href="/gallery/older/" class="btn bg-info btn-raised">Older...</a>
              </div>
-          </div><br>
+          </div>
+  
+  
+</div>
+<br>
+
 
 
     </main>
