--- a/gallery/older/index.html
+++ b/gallery/older/index.html
@@ -272,13 +272,15 @@ crossorigin="anonymous"></script>
       </div>
     </div>
   </section>
+  
+            <div class="container justify-content-between align-items-center"><br>
+            <div class="row">
+                <a href="/gallery/" class="btn bg-info btn-raised">Back</a>
+             </div>
+          </div>
+  
 </div>
 <br>
-            <div class="container justify-content-between align-items-center ml-1"><br>
-            <div class="row pl-1">
-                <a href="/gallery/" class="btn bg-info btn-raised">Previous...</a>
-             </div>
-          </div><br>
 
 
     </main>
