--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ crossorigin="anonymous"></script>
             </div>
 
 <div class="text-start">
-  <h4 class="text-start">Categories</h4>
+  <h4 class="text-start"></h4>
 <div class="ob-meta-top">
     <li>
       <a href="#">Software <span></span>
