--- a/privacy-cookies-policy/index.html
+++ b/privacy-cookies-policy/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> OpenBosniana OS | Free, Lightweight, Secure, GNU/Linux Operating System | OpenBosniana OS | </title>
+    <title> Privacy & Cookies Policy | OpenBosniana OS | Free, Lightweight, Secure, GNU/Linux Operating System | OpenBosniana OS | </title>
     <meta name="description" content="OpenBosniana OS | Free, lightweight, GNU/Linux operating system">
     <meta name="keywords" content="openBosniana OS, Bosniana OS, Debian Distro, Security,linux pentest, linux, lightweight, kde, distro, operating system, free operating system, linux download, windows linux, linux install, software linux, linux kernel, linux light, linux operating system, linux laptop, linux ubuntu, linux apps, linux basics, free software, free software foundation, open source, open source projects, linux mint, gaming linux, distro linux, linux desktop, linux os, easy to use, linuxlite, linux operating system download, download linux operating system, linux free, free os" />
     <meta name="author" content="Denis Maslo">
@@ -100,10 +100,9 @@ crossorigin="anonymous"></script>
     <button class="nav-drop-menu" id="dropdownBtn">
         <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
         <div class="nav-dropdown-content navbar-color">
-            <p>Latest</p>
+            <a href="https://bosniana.org/downloads/">Downloads</a>
             <a href="https://bosniana.org/blog/home-052025/">Release Notes | HOME</a>
             <a href="https://bosniana.org/blog/edu-112024/">Release Notes | EDU</a>
-            <a href="https://bosniana.org/downloads/">Downloads</a>
             <p></p>
             <a href="https://bosniana.org/wiki/installation-guide/" target="blank">Installation Guide</a>
             <a href="https://bosniana.org/wiki/">Documentation</a>
@@ -190,38 +189,6 @@ crossorigin="anonymous"></script>
 <br>
     </ul>
 </div>
-
-  <nav class="snavbar">
-    <ul>
-      <!-- <li><a href="#">Početna</a></li>
--->
-      <li class="sdropdown">
-        <a href="#" class="sdropdown-toggle">Project</a>
-        <div class="sdropdown-menu">
-          <a href="#">Home</a>
-          <a href="#">Education</a>
-          <a href="#">Security</a>
-          <a href="#">Core</a>
-          <a href="#">Requirements</a>
-          <a href="#">Documentation</a>
-          <a href="#">About</a>
-          <a href="#">FAQ</a>
-        </div>
-      </li>
-
-      <li class="sdropdown">
-        <a href="#" class="sdropdown-toggle">Wiki</a>
-        <div class="sdropdown-menu">
-          <a href="#">Installation Guide</a>
-          <a href="#">User Guide</a>
-        </div>
-      </li>
-
-      <li><a href="#">Search</a></li>
-      <li><a href="#">Learn Linux</a></li>     
-    </ul>
-  </nav>
-
 
     <main class="page-content" aria-label="Content">
 <br><br><br>
@@ -354,6 +321,9 @@ You can find out how to manage and delete cookies at <a href="http://www.aboutco
           </a></p>
             <p>Info:           <a href="mailto:info@bosniana.org">
              info [@] bosniana.org
+          </a></p><br>
+          <p><a href="/privacy-cookies-policy/">
+             Privacy & Cookies Policy
           </a></p>
           </div>
 
