--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
     <link rel="manifest" href="assets/favicon/manifest.json">
     <meta property="og:title" content="">
-    <meta property="og:url" content="https://bosniana.org/">
+    <meta property="og:url" content="http://192.168.0.9:4000/">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
 
-    <link rel="canonical" href="https://bosniana.org/">
+    <link rel="canonical" href="http://192.168.0.9:4000/">
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="/rss.xml">
 
     <meta property="og:url" content="https://bosniana.org/">
@@ -810,7 +810,7 @@
               <p class="ob-post-category">Release notes</p>
 
               <h2 class="ob-title">
-                <a href="/blog/home-092024/">OpenBosniana Home KDE 092024</a>
+                <a href="/blog/home-122024/">OpenBosniana Home KDE 122024</a>
               </h2>
 
               <div class="d-flex align-items-center">
