--- a/bs/index.html
+++ b/bs/index.html
@@ -24,12 +24,12 @@
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
     <link rel="manifest" href="assets/favicon/manifest.json">
     <meta property="og:title" content="">
-    <meta property="og:url" content="https://bosniana.org/bs/">
+    <meta property="og:url" content="http://192.168.0.9:4000/bs/">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
 
-    <link rel="canonical" href="https://bosniana.org/bs/">
+    <link rel="canonical" href="http://192.168.0.9:4000/bs/">
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="/rss.xml">
 
     <meta property="og:url" content="https://bosniana.org/">
@@ -809,7 +809,7 @@ Dizajniran za jednostavnu upotrebu, s laganim i korisnički prilagođenim radnim
               <p class="ob-post-category">Bilješke o izdanju</p>
 
               <h2 class="ob-title">
-                <a href="/bs/blog/home-092024/">OpenBosniana Home KDE 092024</a>
+                <a href="/bs/blog/home-122024/">OpenBosniana Home KDE 122024</a>
               </h2>
 
               <div class="d-flex align-items-center">
