--- a/index.html
+++ b/index.html
@@ -661,6 +661,22 @@
           <div class="container"><br>
             <div class="row justify-content-between align-items-center">
 
+
+<!-- Begin  Tag -->
+<div class="sf-root" data-id="3875863" data-badge="oss-open-source-excellence-white" data-metadata="achievement=oss-open-source-excellence" style="width:100px">
+    <a href="https://sourceforge.net/projects/openbosniana-os/" target="_blank">OpenBosniana-OS</a>
+</div>
+<script>(function () {var sc=document.createElement('script');sc.async=true;sc.src='https://b.sf-syn.com/badge_js?sf_id=3875863';var p=document.getElementsByTagName('script')[0];p.parentNode.insertBefore(sc, p);})();
+</script>
+<!-- End  Tag -->
+<!-- Begin  Tag -->
+<div class="sf-root" data-id="3875863" data-badge="oss-community-leader-white" data-metadata="achievement=oss-community-leader" style="width:100px">
+    <a href="https://sourceforge.net/projects/openbosniana-os/" target="_blank">OpenBosniana-OS</a>
+</div>
+<script>(function () {var sc=document.createElement('script');sc.async=true;sc.src='https://b.sf-syn.com/badge_js?sf_id=3875863';var p=document.getElementsByTagName('script')[0];p.parentNode.insertBefore(sc, p);})();
+</script>
+<!-- End  Tag -->
+
 <!-- Begin  Tag -->
 <div class="sf-root" data-id="3875863" data-badge="oss-users-love-us-white" style="width:100px">
     <a href="https://sourceforge.net/projects/openbosniana-os/" target="_blank">OpenBosniana-OS</a>
